<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cheshmak_appkey">VNW3iWBivJ6FAWeHjY3U7w==</string>
    <!--application name-->
    <string name="app_name">Telescope</string>
    <!--transitions-->
    <string name="shared_iconImage">iconTransition</string>

    <!--tab name-->
    <string name="tab1">Recent News</string>
    <string name="tab2">Category</string>

    <!--about information-->
    <string name="app_version">Version 2.1.0</string>
    <string name="app_email">developer.solodroid@gmail.com</string>
    <string name="app_copyright">Copyright &#169; 2015 Solodroid Developer \n All rights reserved</string>
    <string name="title_app_name">Application Name</string>
    <string name="title_app_version">Build Version</string>
    <string name="title_app_email">Email</string>
    <string name="title_app_password">password</string>
    <string name="or">or</string>
    <string name="title_app_signinwithgoogle">Signin with Google</string>
    <string name="title_app_copyright">Copyright</string>

    <!--google cloud messaging (gmc) push notification-->
    <string name="google_api_sender_id">458933407229</string>

    <!--admob banner and interstitial id-->
    <string name="admob_banner_id">ca-app-pub-5107556562590198/2806854461</string>
    <string name="admob_interstitial_id">ca-app-pub-5107556562590198/4283587669</string>

    <!--display admob setting-->
    <!--@string/admob_on to enable admob-->
    <!--@string/admob_off to disable admob-->
    <string name="admob_visibility">@string/admob_on</string>

    <!--value enable and disable admob-->
    <string name="admob_on">0</string>
    <string name="admob_off">2</string>

    <!--set to @string/date_off to disable date display and date_on to enable date display-->
    <string name="date_visibility">@string/date_on</string>

    <!--value enable and disable date display-->
    <string name="date_on">0</string>
    <string name="date_off">2</string>

    <!-- startapp ads -->
    <string name="startapp_account_id">102358176</string>
    <string name="startapp_app_id">203718681</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Solodroid</string>

    <!--navigation drawer menu name-->
    <string name="drawer_home">Home</string>
    <string name="drawer_favorite">Favorite</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">More</string>
    <string name="drawer_setting">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="drawer_visibility">@string/drawer_content_on</string>
    <string name="drawer_content_on">0</string>
    <string name="drawer_content_off">2</string>

    <!--preferences settings-->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_notifications">Push Notification</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_rate">Rate</string>
    <string name="pref_header_more">More</string>
    <string name="pref_header_notifications_summary">Notification and Sound</string>
    <string name="pref_header_about_summary">Information about application</string>
    <string name="pref_header_rate_summary">Give your rate and feedback</string>
    <string name="pref_header_more_summary">More apps from developer</string>
    <string name="pref_title_ringtone">Notification Sound</string>
    <string name="pref_title_new_message_notifications">New Notifications Message</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_ringtone_silent">Silent</string>

    <!--network-->
    <string name="failed_connect_network">No Internet Connection!!</string>
    <string name="loading">Loading&#8230;</string>

    <!--others-->
    <string name="search_query_text">Search&#8230;</string>
    <string name="search_hint">Hint</string>
    <string name="menu_share">Share</string>
    <string name="stats">Stats</string>
    <string name="search">Search</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="img_no">No Favorite Found</string>
    <string name="desc">desc</string>
    <string name="menu_fav">Add to Favorite</string>

    <string name="web_client_id">192102569298-7c7rs1vb63etaivart3rig6ht3hcudfd.apps.googleusercontent.com</string>
    <string name="markets_link">markets</string>


    <string name="type_your_commnet">your comment ...</string>
    <string name="showRatePanel">submit your Rate</string>
    <string name="submit_commnet">submit</string>
    <string name="UILable">UI</string>
    <string name="title_app_signin">signin</string>
    <string name="title_app_youShouldSignIn">you should signin to your account</string>
    <string name="title_app_signup">signup</string>
    <string name="dismiss">dismiss</string>
    <string name="pleaseWait">Please Wait</string>

    <string name="ratetitleUI">UI</string>
    <string name="ratetitleUX">UX</string>
    <string name="ratetitleUsibity">usibility</string>
    <string name="ratetitleOptions">options</string>
    <string name="ratetitleCorrenct">correct</string>
    <string name="introduce_txt">introduce</string>
    <string name="drawer_setting_txt">setting</string>
    <string name="please_login_or_signup">login</string>
    <string name="show_all_comments">show all comments</string>
    <string name="total_rates">مجموع نظرها</string>


</resources>