<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
   android:paddingBottom="20dp"
    >

    <RelativeLayout
        android:id="@+id/submitcomment_userinfo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:elevation="5dp"
        >
        <com.negah.telescope.app.utilities.RoundedImageView
            android:id="@+id/submitcomment_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            app:border_color="@color/divider"
            app:border_width="0dip"
            app:is_oval="true"
            app:round_background="true"
            />
        <com.negah.telescope.app.view.CustomFontTextView
            android:id="@+id/submitcomment_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/submitcomment_avatar"
            android:text="username"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/comment_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="locale"
       android:layout_below="@id/submitcomment_userinfo"

        >
    <com.negah.telescope.app.view.CustomEditText

        android:id="@+id/submit_comment_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:singleLine="false"
        android:hint="@string/type_your_commnet"
        android:gravity="top|right"
        android:padding="10dp"
        />
</android.support.design.widget.TextInputLayout>
    <com.negah.telescope.app.view.CustomFontCheckBox
        android:id="@+id/submit_comment_showrate_chb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showRatePanel"
       android:layoutDirection="rtl"
        android:layout_below="@id/comment_input_layout"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:maxLength="@integer/max_comment_lenght"
        />
    <include
        layout="@layout/submit_rate"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/submit_commnet"
        android:layout_below="@+id/submit_rate_panel"
        android:layout_margin="10dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        />
</RelativeLayout>
</ScrollView>